--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<html>
-
-</html>[A[D[D[D[D[D[D[D<body> hello from html page</body>[B[B[B[D[A[A[A[C[C[C[D[D[B[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D
+<html><body>
+so this is new</body><html[D[D[D[D/[C[Ch[Dhg[D[Dhtml>
